Name: unirec
Version: 0.0.1
Cabal-Version: >= 1.2
Build-Type: Simple
Category: Other
Maintainer: Dmitry Antonyuk <lomeo.nuke@gmail.com>
Stability: Experimental
License: MIT
License-File: LICENSE
Author: Dmitry Antonyuk
Copyright: Dmitry Antonyuk, 2010

Library
    Hs-Source-Dirs: src
    Build-Depends: base >= 4.0, syb, containers, mtl
    Extensions: DeriveDataTypeable, BangPatterns
    GHC-Options: -Wall
    Exposed-Modules:
        Data.Generics.Rec

