Name: unirec
Version: 0.0.1
Cabal-Version: >= 1.2
Build-Type: Simple
Category: Other
Maintainer: Dmitry Antonyuk <lomeo.nuke@gmail.com>
Homepage: http://github.com/lomeo/unirec
Stability: Experimental
License: MIT
License-File: LICENSE
Author: Dmitry Antonyuk
Copyright: Dmitry Antonyuk, 2010
Synopsis: uniplate-like package for cyclic data structures
Description:
    unirec provides generic operations for cyclic data structures.
    .
    See "Data.Generics.Rec" for more details.

Library
    Hs-Source-Dirs: src
    Build-Depends: base >= 4.0, syb, containers, mtl
    Extensions: DeriveDataTypeable, BangPatterns
    GHC-Options: -Wall
    Exposed-Modules:
        Data.Generics.Rec

Source-Repository head
    Type:     git
    Location: git://github.com/lomeo/unirec
